update build.gradle
- added mergeServiceFiles() in shadowJar config
- remove redundant codes